logs/composite.log
1898372_1898374_1898375_M104PD-BLK_3.tiff
1898377_1898378_1898379_M103PD-BLK_3.tiff
{
  filepath: '1898372_1898374_1898375_M104PD-BLK_3.tiff',
  artworksPath: '/Volumes/nas/48/Zazzle/auto_print/openprint/batch_downloaded_PowerBank_104/batch_downloaded_873875-2022-03-14/artworks_873875-2022-03-14'
}
{
  filepath: '1898377_1898378_1898379_M103PD-BLK_3.tiff',
  artworksPath: '/Volumes/nas/48/Zazzle/auto_print/openprint/batch_downloaded_PowerBank_103/batch_downloaded_873874-2022-03-14/artworks_873874-2022-03-14'
}
/Users/itadmin/Documents/Code/compositePowerBanks/readTiffsAndComposite.js:242
          newPath = file.replaceAll('downloaded', 'printed')
                         ^

TypeError: file.replaceAll is not a function
    at /Users/itadmin/Documents/Code/compositePowerBanks/readTiffsAndComposite.js:242:26
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/itadmin/Documents/Code/compositePowerBanks/readTiffsAndComposite.js:240:19)
/Users/itadmin/Documents/Code/compositePowerBanks/readTiffsAndComposite.js:137
<<<<<<< HEAD
^^

SyntaxError: Unexpected token '<<'
    at Module._compile (internal/modules/cjs/loader.js:892:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:973:10)
    at Module.load (internal/modules/cjs/loader.js:812:32)
    at Function.Module._load (internal/modules/cjs/loader.js:724:14)
    at Function.Module.runMain (internal/modules/cjs/loader.js:1025:10)
    at internal/main/run_main_module.js:17:11
